<resources>
    <string name="app_name">Peercoin Wallet</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="recover_old_wallet">Recover old wallet</string>
    <string name="set_pin">Set PIN</string>
    <string name="description_app_logo">App logo</string>
    <string name="description_peercoin_text">Peercoin text</string>
    <string name="description_arrow_back">Arrow back</string>
    <string name="pin_message_1">Your PIN will be used to unlock your Peercoin Wallet and to send money.</string>
    <string name="pin_message_2">Remember this PIN. If you forget it, you won\'t be able to access your peercoins.</string>
    <string name="pin_message_3">Repeat PIN to confirm it!</string>
    <string name="caution">Caution!</string>
    <string name="pin_success_set">PIN is set!</string>
    <string name="paper_key_intro1">Paper key is the only way to restore your Peercoin Wallet if you lose, corrupt or upgrade your phone.</string>
    <string name="paper_key_intro2">We will show you list of words to write down on piece of paper and keep safe.</string>
    <string name="write_paper_key">Write down paper key</string>
    <string name="paper_key">Paper key</string>
    <string name="step_1">Step 1</string>
    <string name="step_1_message">Write down each word in exact order and store it in a safe place.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="step_2">Step 2</string>
    <string name="step_2_message">To make sure everything was written down correctly, please enter the following words from your paper key.</string>
    <string name="submit">Submit</string>
    <string name="word">Word</string>
    <string name="incorrect_title">Incorrect</string>
    <string name="incorrect_words_message">One or more words you have entered are incorrect.</string>
    <string name="success">Success</string>
    <string name="touch_id_message">Touch ID for \"Peercoin wallet\"</string>
    <string name="unlock_message">Unlock wallet with your finger.</string>
    <string name="cancel">Cancel</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="use_touch_id">or use Touch ID</string>
    <string name="dev_not_supp">Your device does not support fingerprint</string>
    <string name="no_enrolled_fp">There are no saved fingerprints on device, go to Settings and setup fingerprint</string>
    <string name="dev_not_secure">Your device is not locked with pin, please lock your device to use fingerprint</string>
</resources>
