<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.paper_key.intro.PaperKeyIntroFragment">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="10dp"
                app:srcCompat="@drawable/paper_key3" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paper_key_intro1"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/paper_key_intro2"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWriteDown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:text="@string/write_paper_key"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="4dp" />

        </FrameLayout>


</LinearLayout>